src/maths_parser.output
Nonterminals useless in grammar

   MULTIPLICATIVE_EXPRESSION
   ADDITIVE_EXPRESSION
   SHIFT_EXPRESSION
   RELATIONAL_EXPRESSION
   EQUALITY_EXPRESSION
   AND_EXPRESSION
   EXCLUSIVE_OR_EXPRESSION
   INCLUSIVE_OR_EXPRESSION
   LOGICAL_AND_EXPRESSION
   LOGICAL_OR_EXPRESSION
   STRUCT_DECLARATION_LIST
   STRUCT_DECLARATION
   STRUCT_DECLARATOR_LIST
   STRUCT_DECLARATOR
   EXPR
   FACTOR
   FUNCTION_NAME
   TERM
   UNARY


Terminals unused in grammar

   T_DIVIDE
   T_EXPONENT
   T_LSHIFT
   T_RSHIFT
   T_LESSTHAN
   T_GREATERTHAN
   T_EQUALS
   T_NOT_EQUALS
   T_AND
   T_XOR
   T_OR
   T_AND_OP
   T_OR_OP
   T_QUESTION
   T_LOG
   T_EXP
   T_SQRT
   T_MAIN


Rules useless in grammar

  124 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
  125                          | MULTIPLICATIVE_EXPRESSION T_STAR CAST_EXPRESSION

  126 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
  127                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION

  128 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
  129                 | SHIFT_EXPRESSION T_LSHIFT SHIFT_EXPRESSION
  130                 | SHIFT_EXPRESSION T_RSHIFT SHIFT_EXPRESSION

  131 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
  132                      | SHIFT_EXPRESSION T_LESSTHAN SHIFT_EXPRESSION
  133                      | SHIFT_EXPRESSION T_GREATERTHAN SHIFT_EXPRESSION

  134 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
  135                    | EQUALITY_EXPRESSION T_EQUALS EQUALITY_EXPRESSION
  136                    | EQUALITY_EXPRESSION T_NOT_EQUALS EQUALITY_EXPRESSION

  137 AND_EXPRESSION: EQUALITY_EXPRESSION
  138               | EQUALITY_EXPRESSION T_AND EQUALITY_EXPRESSION

  139 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
  140                        | EXCLUSIVE_OR_EXPRESSION T_XOR AND_EXPRESSION

  141 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
  142                        | INCLUSIVE_OR_EXPRESSION T_OR EXCLUSIVE_OR_EXPRESSION

  143 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
  144                       | LOGICAL_AND_EXPRESSION T_AND_OP INCLUSIVE_OR_EXPRESSION

  145 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
  146                      | LOGICAL_OR_EXPRESSION T_OR_OP LOGICAL_AND_EXPRESSION
  147                      | LOGICAL_OR_EXPRESSION T_QUESTION EXPRESSION T_COLON CONDITIONAL_EXPRESSION

  148 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION T_IDENTIFIER T_LCURLY STRUCT_DECLARATION_LIST T_RCURLY
  149                          | STRUCT_OR_UNION T_LCURLY STRUCT_DECLARATION_LIST T_RCURLY

  150 STRUCT_DECLARATION_LIST: STRUCT_DECLARATION
  151                        | STRUCT_DECLARATION_LIST STRUCT_DECLARATION

  152 STRUCT_DECLARATION: SPECIFIER_QUALIFIER_LIST STRUCT_DECLARATION_LIST T_SEMICOLON

  153 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
  154                       | STRUCT_DECLARATOR_LIST T_COMMA STRUCT_DECLARATOR

  155 STRUCT_DECLARATOR: DECLARATOR
  156                  | T_COLON CONSTANT_EXPRESSION
  157                  | DECLARATOR T_COLON CONSTANT_EXPRESSION


State 16 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: TRANSLATION_UNIT

    2 PRIMARY_EXPRESSION: T_IDENTIFIER
    3                   | T_CONSTANT
    4                   | T_LBRACKET EXPRESSION T_RBRACKET

    5 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
    6                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
    7                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET

    8 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
    9                         | ARGUMENT_EXPRESSION_LIST T_COMMA ASSIGNMENT_EXPRESSION

   10 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   11                 | UNARY_OPERATOR CAST_EXPRESSION

   12 UNARY_OPERATOR: T_STAR
   13               | T_PLUS
   14               | T_MINUS

   15 CAST_EXPRESSION: UNARY_EXPRESSION
   16                | T_LBRACKET TYPE_NAME T_RBRACKET CAST_EXPRESSION

   17 CONDITIONAL_EXPRESSION: %empty

   18 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   19                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   20 ASSIGNMENT_OPERATOR: T_ASSIGN

   21 EXPRESSION: ASSIGNMENT_EXPRESSION
   22           | EXPRESSION T_COMMA ASSIGNMENT_EXPRESSION

   23 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

   24 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON
   25            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SEMICOLON

   26 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER
   27                       | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS
   28                       | TYPE_SPECIFIER
   29                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS
   30                       | TYPE_QUALIFIER
   31                       | TYPE_QUALIFIER DECLARATION_SPECIFIERS
   32                       | TYPE_SPECIFIER T_IDENTIFIER

   33 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   34                     | INIT_DECLARATOR_LIST T_COMMA INIT_DECLARATOR

   35 INIT_DECLARATOR: DECLARATOR
   36                | DECLARATOR T_ASSIGN INITIALIZER

   37 STORAGE_CLASS_SPECIFIER: T_TYPEDEF

   38 TYPE_SPECIFIER: T_VOID
   39               | T_INT
   40               | STRUCT_OR_UNION_SPECIFIER
   41               | ENUM_SPECIFIER

   42 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION T_IDENTIFIER

   43 STRUCT_OR_UNION: T_STRUCT
   44                | T_UNION

   45 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER SPECIFIER_QUALIFIER_LIST
   46                         | TYPE_SPECIFIER
   47                         | TYPE_QUALIFIER SPECIFIER_QUALIFIER_LIST
   48                         | TYPE_QUALIFIER

   49 ENUM_SPECIFIER: T_ENUM T_LCURLY ENUMERATOR_LIST T_RCURLY
   50               | T_ENUM T_IDENTIFIER T_LCURLY ENUMERATOR_LIST T_RCURLY
   51               | T_ENUM T_IDENTIFIER

   52 ENUMERATOR_LIST: ENUMERATOR
   53                | ENUMERATOR_LIST T_COMMA ENUMERATOR

   54 ENUMERATOR: T_IDENTIFIER
   55           | T_IDENTIFIER T_ASSIGN CONSTANT_EXPRESSION

   56 TYPE_QUALIFIER: T_CONST
   57               | T_VOLATILE

   58 DECLARATOR: POINTER DIRECT_DECLARATOR
   59           | DIRECT_DECLARATOR

   60 DIRECT_DECLARATOR: T_IDENTIFIER
   61                  | T_LBRACKET DECLARATOR T_RBRACKET
   62                  | DIRECT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
   63                  | DIRECT_DECLARATOR T_LBRACKET IDENTIFIER_LIST T_RBRACKET
   64                  | DIRECT_DECLARATOR T_LBRACKET T_RBRACKET

   65 POINTER: T_STAR
   66        | T_STAR TYPE_QUALIFIER_LIST
   67        | T_STAR POINTER
   68        | T_STAR TYPE_QUALIFIER_LIST POINTER

   69 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER
   70                    | TYPE_QUALIFIER_LIST TYPE_QUALIFIER

   71 PARAMETER_TYPE_LIST: PARAMETER_LIST

   72 PARAMETER_LIST: PARAMETER_DECLARATION
   73               | PARAMETER_LIST T_COMMA PARAMETER_DECLARATION

   74 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR
   75                      | DECLARATION_SPECIFIERS ABSTRACT_DECLARATOR
   76                      | DECLARATION_SPECIFIERS

   77 IDENTIFIER_LIST: T_IDENTIFIER
   78                | IDENTIFIER_LIST T_COMMA T_IDENTIFIER

   79 TYPE_NAME: SPECIFIER_QUALIFIER_LIST
   80          | SPECIFIER_QUALIFIER_LIST ABSTRACT_DECLARATOR

   81 ABSTRACT_DECLARATOR: POINTER
   82                    | DIRECT_ABSTRACT_DECLARATOR
   83                    | POINTER DIRECT_ABSTRACT_DECLARATOR

   84 DIRECT_ABSTRACT_DECLARATOR: T_LBRACKET ABSTRACT_DECLARATOR T_RBRACKET
   85                           | T_LBRACKET T_RBRACKET
   86                           | T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
   87                           | DIRECT_ABSTRACT_DECLARATOR T_LBRACKET T_RBRACKET
   88                           | DIRECT_ABSTRACT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET

   89 INITIALIZER: ASSIGNMENT_EXPRESSION
   90            | T_LCURLY INITIALIZER_LIST T_RCURLY
   91            | T_LCURLY INITIALIZER_LIST T_COMMA T_RCURLY

   92 INITIALIZER_LIST: INITIALIZER
   93                 | INITIALIZER_LIST T_COMMA INITIALIZER

   94 STATEMENT: LABELED_STATEMENT
   95          | COMPOUND_STATEMENT
   96          | EXPRESSION_STATEMENT
   97          | SELECTION_STATEMENT
   98          | ITERATION_STATEMENT
   99          | JUMP_STATEMENT

  100 LABELED_STATEMENT: T_IDENTIFIER T_COLON STATEMENT

  101 COMPOUND_STATEMENT: T_LCURLY T_RCURLY
  102                   | T_LCURLY STATEMENT_LIST T_RCURLY
  103                   | T_LCURLY DECLARATION_LIST T_RCURLY
  104                   | T_LCURLY DECLARATION_LIST STATEMENT_LIST T_RCURLY

  105 DECLARATION_LIST: DECLARATION
  106                 | DECLARATION_LIST DECLARATION

  107 STATEMENT_LIST: STATEMENT
  108               | STATEMENT_LIST STATEMENT

  109 EXPRESSION_STATEMENT: T_SEMICOLON
  110                     | EXPRESSION T_SEMICOLON

  111 SELECTION_STATEMENT: T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
  112                    | T_IF T_LBRACKET EXPRESSION T_RBRACKET T_ELSE STATEMENT

  113 ITERATION_STATEMENT: T_WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT

  114 JUMP_STATEMENT: T_RETURN T_SEMICOLON
  115               | T_RETURN EXPRESSION T_SEMICOLON

  116 TRANSLATION_UNIT: EXTERNAL_DECLARATION
  117                 | TRANSLATION_UNIT EXTERNAL_DECLARATION

  118 EXTERNAL_DECLARATION: FUNCTION_DEFINITION
  119                     | DECLARATION

  120 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  121                    | DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT
  122                    | DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  123                    | DECLARATOR COMPOUND_STATEMENT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_STAR (258) 12 65 66 67 68
T_DIVIDE (259)
T_PLUS (260) 13
T_MINUS (261) 14
T_EXPONENT (262)
T_COMMA (263) 9 22 34 53 73 78 91 93
T_LSHIFT (264)
T_RSHIFT (265)
T_LESSTHAN (266)
T_GREATERTHAN (267)
T_EQUALS (268)
T_NOT_EQUALS (269)
T_AND (270)
T_XOR (271)
T_OR (272)
T_AND_OP (273)
T_OR_OP (274)
T_QUESTION (275)
T_LBRACKET (276) 4 6 7 16 61 62 63 64 84 85 86 87 88 111 112 113
T_RBRACKET (277) 4 6 7 16 61 62 63 64 84 85 86 87 88 111 112 113
T_LCURLY (278) 49 50 90 91 101 102 103 104
T_RCURLY (279) 49 50 90 91 101 102 103 104
T_SEMICOLON (280) 24 25 109 110 114 115
T_COLON (281) 100
T_LOG (282)
T_EXP (283)
T_SQRT (284)
T_IF (285) 111 112
T_ELSE (286) 112
T_WHILE (287) 113
T_RETURN (288) 114 115
T_MAIN (289)
T_INT (290) 39
T_VOID (291) 38
T_STRUCT (292) 43
T_UNION (293) 44
T_ENUM (294) 49 50 51
T_ASSIGN (295) 20 36 55
T_CONSTANT (296) 3
T_IDENTIFIER (297) 2 32 42 50 51 54 55 60 77 78 100
T_TYPEDEF (298) 37
T_CONST (299) 56
T_VOLATILE (300) 57


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
ROOT (47)
    on left: 1, on right: 0
PRIMARY_EXPRESSION (48)
    on left: 2 3 4, on right: 5
POSTFIX_EXPRESSION (49)
    on left: 5 6 7, on right: 6 7 10
ARGUMENT_EXPRESSION_LIST (50)
    on left: 8 9, on right: 7 9
UNARY_EXPRESSION (51)
    on left: 10 11, on right: 15 19
UNARY_OPERATOR (52)
    on left: 12 13 14, on right: 11
CAST_EXPRESSION (53)
    on left: 15 16, on right: 11 16
CONDITIONAL_EXPRESSION (54)
    on left: 17, on right: 18 23
ASSIGNMENT_EXPRESSION (55)
    on left: 18 19, on right: 8 9 19 21 22 89
ASSIGNMENT_OPERATOR (56)
    on left: 20, on right: 19
EXPRESSION (57)
    on left: 21 22, on right: 4 22 110 111 112 113 115
CONSTANT_EXPRESSION (58)
    on left: 23, on right: 55
DECLARATION (59)
    on left: 24 25, on right: 105 106 119
DECLARATION_SPECIFIERS (60)
    on left: 26 27 28 29 30 31 32, on right: 24 25 27 29 31 74 75 76
    120 121
INIT_DECLARATOR_LIST (61)
    on left: 33 34, on right: 25 34
INIT_DECLARATOR (62)
    on left: 35 36, on right: 33 34
STORAGE_CLASS_SPECIFIER (63)
    on left: 37, on right: 26 27
TYPE_SPECIFIER (64)
    on left: 38 39 40 41, on right: 28 29 32 45 46
STRUCT_OR_UNION_SPECIFIER (65)
    on left: 42, on right: 40
STRUCT_OR_UNION (66)
    on left: 43 44, on right: 42
SPECIFIER_QUALIFIER_LIST (67)
    on left: 45 46 47 48, on right: 45 47 79 80
ENUM_SPECIFIER (68)
    on left: 49 50 51, on right: 41
ENUMERATOR_LIST (69)
    on left: 52 53, on right: 49 50 53
ENUMERATOR (70)
    on left: 54 55, on right: 52 53
TYPE_QUALIFIER (71)
    on left: 56 57, on right: 30 31 47 48 69 70
DECLARATOR (72)
    on left: 58 59, on right: 35 36 61 74 120 121 122 123
DIRECT_DECLARATOR (73)
    on left: 60 61 62 63 64, on right: 58 59 62 63 64
POINTER (74)
    on left: 65 66 67 68, on right: 58 67 68 81 83
TYPE_QUALIFIER_LIST (75)
    on left: 69 70, on right: 66 68 70
PARAMETER_TYPE_LIST (76)
    on left: 71, on right: 62 86 88
PARAMETER_LIST (77)
    on left: 72 73, on right: 71 73
PARAMETER_DECLARATION (78)
    on left: 74 75 76, on right: 72 73
IDENTIFIER_LIST (79)
    on left: 77 78, on right: 63 78
TYPE_NAME (80)
    on left: 79 80, on right: 16
ABSTRACT_DECLARATOR (81)
    on left: 81 82 83, on right: 75 80 84
DIRECT_ABSTRACT_DECLARATOR (82)
    on left: 84 85 86 87 88, on right: 82 83 87 88
INITIALIZER (83)
    on left: 89 90 91, on right: 36 92 93
INITIALIZER_LIST (84)
    on left: 92 93, on right: 90 91 93
STATEMENT (85)
    on left: 94 95 96 97 98 99, on right: 100 107 108 111 112 113
LABELED_STATEMENT (86)
    on left: 100, on right: 94
COMPOUND_STATEMENT (87)
    on left: 101 102 103 104, on right: 95 120 121 122 123
DECLARATION_LIST (88)
    on left: 105 106, on right: 103 104 106 120 122
STATEMENT_LIST (89)
    on left: 107 108, on right: 102 104 108
EXPRESSION_STATEMENT (90)
    on left: 109 110, on right: 96
SELECTION_STATEMENT (91)
    on left: 111 112, on right: 97
ITERATION_STATEMENT (92)
    on left: 113, on right: 98
JUMP_STATEMENT (93)
    on left: 114 115, on right: 99
TRANSLATION_UNIT (94)
    on left: 116 117, on right: 1 117
EXTERNAL_DECLARATION (95)
    on left: 118 119, on right: 116 117
FUNCTION_DEFINITION (96)
    on left: 120 121 122 123, on right: 118


State 0

    0 $accept: . ROOT $end

    T_STAR        shift, and go to state 1
    T_LBRACKET    shift, and go to state 2
    T_INT         shift, and go to state 3
    T_VOID        shift, and go to state 4
    T_STRUCT      shift, and go to state 5
    T_UNION       shift, and go to state 6
    T_ENUM        shift, and go to state 7
    T_IDENTIFIER  shift, and go to state 8
    T_TYPEDEF     shift, and go to state 9
    T_CONST       shift, and go to state 10
    T_VOLATILE    shift, and go to state 11

    ROOT                       go to state 12
    DECLARATION                go to state 13
    DECLARATION_SPECIFIERS     go to state 14
    STORAGE_CLASS_SPECIFIER    go to state 15
    TYPE_SPECIFIER             go to state 16
    STRUCT_OR_UNION_SPECIFIER  go to state 17
    STRUCT_OR_UNION            go to state 18
    ENUM_SPECIFIER             go to state 19
    TYPE_QUALIFIER             go to state 20
    DECLARATOR                 go to state 21
    DIRECT_DECLARATOR          go to state 22
    POINTER                    go to state 23
    TRANSLATION_UNIT           go to state 24
    EXTERNAL_DECLARATION       go to state 25
    FUNCTION_DEFINITION        go to state 26


State 1

   65 POINTER: T_STAR .
   66        | T_STAR . TYPE_QUALIFIER_LIST
   67        | T_STAR . POINTER
   68        | T_STAR . TYPE_QUALIFIER_LIST POINTER

    T_STAR      shift, and go to state 1
    T_CONST     shift, and go to state 10
    T_VOLATILE  shift, and go to state 11

    $default  reduce using rule 65 (POINTER)

    TYPE_QUALIFIER       go to state 27
    POINTER              go to state 28
    TYPE_QUALIFIER_LIST  go to state 29


State 2

   61 DIRECT_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_STAR        shift, and go to state 1
    T_LBRACKET    shift, and go to state 2
    T_IDENTIFIER  shift, and go to state 8

    DECLARATOR         go to state 30
    DIRECT_DECLARATOR  go to state 22
    POINTER            go to state 23


State 3

   39 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 39 (TYPE_SPECIFIER)


State 4

   38 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 38 (TYPE_SPECIFIER)


State 5

   43 STRUCT_OR_UNION: T_STRUCT .

    $default  reduce using rule 43 (STRUCT_OR_UNION)


State 6

   44 STRUCT_OR_UNION: T_UNION .

    $default  reduce using rule 44 (STRUCT_OR_UNION)


State 7

   49 ENUM_SPECIFIER: T_ENUM . T_LCURLY ENUMERATOR_LIST T_RCURLY
   50               | T_ENUM . T_IDENTIFIER T_LCURLY ENUMERATOR_LIST T_RCURLY
   51               | T_ENUM . T_IDENTIFIER

    T_LCURLY      shift, and go to state 31
    T_IDENTIFIER  shift, and go to state 32


State 8

   60 DIRECT_DECLARATOR: T_IDENTIFIER .

    $default  reduce using rule 60 (DIRECT_DECLARATOR)


State 9

   37 STORAGE_CLASS_SPECIFIER: T_TYPEDEF .

    $default  reduce using rule 37 (STORAGE_CLASS_SPECIFIER)


State 10

   56 TYPE_QUALIFIER: T_CONST .

    $default  reduce using rule 56 (TYPE_QUALIFIER)


State 11

   57 TYPE_QUALIFIER: T_VOLATILE .

    $default  reduce using rule 57 (TYPE_QUALIFIER)


State 12

    0 $accept: ROOT . $end

    $end  shift, and go to state 33


State 13

  119 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 119 (EXTERNAL_DECLARATION)


State 14

   24 DECLARATION: DECLARATION_SPECIFIERS . T_SEMICOLON
   25            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SEMICOLON
  120 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS . DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  121                    | DECLARATION_SPECIFIERS . DECLARATOR COMPOUND_STATEMENT

    T_STAR        shift, and go to state 1
    T_LBRACKET    shift, and go to state 2
    T_SEMICOLON   shift, and go to state 34
    T_IDENTIFIER  shift, and go to state 8

    INIT_DECLARATOR_LIST  go to state 35
    INIT_DECLARATOR       go to state 36
    DECLARATOR            go to state 37
    DIRECT_DECLARATOR     go to state 22
    POINTER               go to state 23


State 15

   26 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER .
   27                       | STORAGE_CLASS_SPECIFIER . DECLARATION_SPECIFIERS

    T_INT       shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRUCT    shift, and go to state 5
    T_UNION     shift, and go to state 6
    T_ENUM      shift, and go to state 7
    T_TYPEDEF   shift, and go to state 9
    T_CONST     shift, and go to state 10
    T_VOLATILE  shift, and go to state 11

    $default  reduce using rule 26 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS     go to state 38
    STORAGE_CLASS_SPECIFIER    go to state 15
    TYPE_SPECIFIER             go to state 16
    STRUCT_OR_UNION_SPECIFIER  go to state 17
    STRUCT_OR_UNION            go to state 18
    ENUM_SPECIFIER             go to state 19
    TYPE_QUALIFIER             go to state 20


State 16

   28 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   29                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS
   32                       | TYPE_SPECIFIER . T_IDENTIFIER

    T_INT         shift, and go to state 3
    T_VOID        shift, and go to state 4
    T_STRUCT      shift, and go to state 5
    T_UNION       shift, and go to state 6
    T_ENUM        shift, and go to state 7
    T_IDENTIFIER  shift, and go to state 39
    T_TYPEDEF     shift, and go to state 9
    T_CONST       shift, and go to state 10
    T_VOLATILE    shift, and go to state 11

    T_IDENTIFIER  [reduce using rule 28 (DECLARATION_SPECIFIERS)]
    $default      reduce using rule 28 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS     go to state 40
    STORAGE_CLASS_SPECIFIER    go to state 15
    TYPE_SPECIFIER             go to state 16
    STRUCT_OR_UNION_SPECIFIER  go to state 17
    STRUCT_OR_UNION            go to state 18
    ENUM_SPECIFIER             go to state 19
    TYPE_QUALIFIER             go to state 20


State 17

   40 TYPE_SPECIFIER: STRUCT_OR_UNION_SPECIFIER .

    $default  reduce using rule 40 (TYPE_SPECIFIER)


State 18

   42 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 41


State 19

   41 TYPE_SPECIFIER: ENUM_SPECIFIER .

    $default  reduce using rule 41 (TYPE_SPECIFIER)


State 20

   30 DECLARATION_SPECIFIERS: TYPE_QUALIFIER .
   31                       | TYPE_QUALIFIER . DECLARATION_SPECIFIERS

    T_INT       shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRUCT    shift, and go to state 5
    T_UNION     shift, and go to state 6
    T_ENUM      shift, and go to state 7
    T_TYPEDEF   shift, and go to state 9
    T_CONST     shift, and go to state 10
    T_VOLATILE  shift, and go to state 11

    $default  reduce using rule 30 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS     go to state 42
    STORAGE_CLASS_SPECIFIER    go to state 15
    TYPE_SPECIFIER             go to state 16
    STRUCT_OR_UNION_SPECIFIER  go to state 17
    STRUCT_OR_UNION            go to state 18
    ENUM_SPECIFIER             go to state 19
    TYPE_QUALIFIER             go to state 20


State 21

  122 FUNCTION_DEFINITION: DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  123                    | DECLARATOR . COMPOUND_STATEMENT

    T_LCURLY    shift, and go to state 43
    T_INT       shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRUCT    shift, and go to state 5
    T_UNION     shift, and go to state 6
    T_ENUM      shift, and go to state 7
    T_TYPEDEF   shift, and go to state 9
    T_CONST     shift, and go to state 10
    T_VOLATILE  shift, and go to state 11

    DECLARATION                go to state 44
    DECLARATION_SPECIFIERS     go to state 45
    STORAGE_CLASS_SPECIFIER    go to state 15
    TYPE_SPECIFIER             go to state 16
    STRUCT_OR_UNION_SPECIFIER  go to state 17
    STRUCT_OR_UNION            go to state 18
    ENUM_SPECIFIER             go to state 19
    TYPE_QUALIFIER             go to state 20
    COMPOUND_STATEMENT         go to state 46
    DECLARATION_LIST           go to state 47


State 22

   59 DECLARATOR: DIRECT_DECLARATOR .
   62 DIRECT_DECLARATOR: DIRECT_DECLARATOR . T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
   63                  | DIRECT_DECLARATOR . T_LBRACKET IDENTIFIER_LIST T_RBRACKET
   64                  | DIRECT_DECLARATOR . T_LBRACKET T_RBRACKET

    T_LBRACKET  shift, and go to state 48

    $default  reduce using rule 59 (DECLARATOR)


State 23

   58 DECLARATOR: POINTER . DIRECT_DECLARATOR

    T_LBRACKET    shift, and go to state 2
    T_IDENTIFIER  shift, and go to state 8

    DIRECT_DECLARATOR  go to state 49


State 24

    1 ROOT: TRANSLATION_UNIT .
  117 TRANSLATION_UNIT: TRANSLATION_UNIT . EXTERNAL_DECLARATION

    T_STAR        shift, and go to state 1
    T_LBRACKET    shift, and go to state 2
    T_INT         shift, and go to state 3
    T_VOID        shift, and go to state 4
    T_STRUCT      shift, and go to state 5
    T_UNION       shift, and go to state 6
    T_ENUM        shift, and go to state 7
    T_IDENTIFIER  shift, and go to state 8
    T_TYPEDEF     shift, and go to state 9
    T_CONST       shift, and go to state 10
    T_VOLATILE    shift, and go to state 11

    $default  reduce using rule 1 (ROOT)

    DECLARATION                go to state 13
    DECLARATION_SPECIFIERS     go to state 14
    STORAGE_CLASS_SPECIFIER    go to state 15
    TYPE_SPECIFIER             go to state 16
    STRUCT_OR_UNION_SPECIFIER  go to state 17
    STRUCT_OR_UNION            go to state 18
    ENUM_SPECIFIER             go to state 19
    TYPE_QUALIFIER             go to state 20
    DECLARATOR                 go to state 21
    DIRECT_DECLARATOR          go to state 22
    POINTER                    go to state 23
    EXTERNAL_DECLARATION       go to state 50
    FUNCTION_DEFINITION        go to state 26


State 25

  116 TRANSLATION_UNIT: EXTERNAL_DECLARATION .

    $default  reduce using rule 116 (TRANSLATION_UNIT)


State 26

  118 EXTERNAL_DECLARATION: FUNCTION_DEFINITION .

    $default  reduce using rule 118 (EXTERNAL_DECLARATION)


State 27

   69 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER .

    $default  reduce using rule 69 (TYPE_QUALIFIER_LIST)


State 28

   67 POINTER: T_STAR POINTER .

    $default  reduce using rule 67 (POINTER)


State 29

   66 POINTER: T_STAR TYPE_QUALIFIER_LIST .
   68        | T_STAR TYPE_QUALIFIER_LIST . POINTER
   70 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER_LIST . TYPE_QUALIFIER

    T_STAR      shift, and go to state 1
    T_CONST     shift, and go to state 10
    T_VOLATILE  shift, and go to state 11

    $default  reduce using rule 66 (POINTER)

    TYPE_QUALIFIER  go to state 51
    POINTER         go to state 52


State 30

   61 DIRECT_DECLARATOR: T_LBRACKET DECLARATOR . T_RBRACKET

    T_RBRACKET  shift, and go to state 53


State 31

   49 ENUM_SPECIFIER: T_ENUM T_LCURLY . ENUMERATOR_LIST T_RCURLY

    T_IDENTIFIER  shift, and go to state 54

    ENUMERATOR_LIST  go to state 55
    ENUMERATOR       go to state 56


State 32

   50 ENUM_SPECIFIER: T_ENUM T_IDENTIFIER . T_LCURLY ENUMERATOR_LIST T_RCURLY
   51               | T_ENUM T_IDENTIFIER .

    T_LCURLY  shift, and go to state 57

    $default  reduce using rule 51 (ENUM_SPECIFIER)


State 33

    0 $accept: ROOT $end .

    $default  accept


State 34

   24 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON .

    $default  reduce using rule 24 (DECLARATION)


State 35

   25 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . T_SEMICOLON
   34 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . T_COMMA INIT_DECLARATOR

    T_COMMA      shift, and go to state 58
    T_SEMICOLON  shift, and go to state 59


State 36

   33 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 33 (INIT_DECLARATOR_LIST)


State 37

   35 INIT_DECLARATOR: DECLARATOR .
   36                | DECLARATOR . T_ASSIGN INITIALIZER
  120 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  121                    | DECLARATION_SPECIFIERS DECLARATOR . COMPOUND_STATEMENT

    T_LCURLY    shift, and go to state 43
    T_INT       shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRUCT    shift, and go to state 5
    T_UNION     shift, and go to state 6
    T_ENUM      shift, and go to state 7
    T_ASSIGN    shift, and go to state 60
    T_TYPEDEF   shift, and go to state 9
    T_CONST     shift, and go to state 10
    T_VOLATILE  shift, and go to state 11

    $default  reduce using rule 35 (INIT_DECLARATOR)
